objects/BeBack__c.object
<CustomObject>
    <fields>
        <fullName>Is_Be_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Be Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Added_by__c</fullName>
        <defaultValue>$User.FirstName + ' ' + $User.LastName</defaultValue>
        <label>Notes Added by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Prospect Notes</relationshipLabel>
        <relationshipName>Prospect_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prospect Note</label>
    <nameField>
        <label>Prospect Note</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>